# usc-multiplayer-server

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.md  Makefile  README.md  app.go  build.linux  charts.json  deadlock.py  go.mod  go.sum  maps.db  middleware.go  room.go  server.go  sol.py  user.go  util.go
.github/workflows/: go.yml
Audio/: CMakeLists.txt
Audio/include/Audio/: Audio.hpp  AudioBase.hpp  AudioOutput.hpp  AudioStream.hpp  AudioStreamBase.hpp  Audio_Impl.hpp  DSP.hpp  Sample.hpp
Audio/src/: Audio.cpp  AudioOutput_SDL.cpp  AudioStream.cpp  AudioStreamBase.cpp  AudioStream_ma.cpp  AudioStream_mp3.cpp  AudioStream_ogg.cpp  AudioStream_wav.cpp  DSP.cpp  Sample.cpp
Audio/src/Windows/: AudioOutput_WASAPI.cpp
Audio/src/minimp3/: libc.h
Beatmap/: CMakeLists.txt
Beatmap/include/Beatmap/: AudioEffects.hpp  Beatmap.hpp  BeatmapObjects.hpp  BeatmapPlayback.hpp  Database.hpp  KShootMap.hpp  MapDatabase.hpp
Beatmap/src/: AudioEffects.cpp  Beatmap.cpp  BeatmapFromKSH.cpp  BeatmapPlayback.cpp  Database.cpp  KShootMap.cpp  MapDatabase.cpp
GUI/: CMakeLists.txt
GUI/include/GUI/: CommonGUIStyle.hpp  GUIRenderer.hpp  SettingsBar.hpp  nanovg_lua.h
GUI/src/: CommonGUIStyle.cpp  GUIRenderer.cpp  SettingsBar.cpp  Slider.cpp
Graphics/: CMakeLists.txt
Graphics/include/Graphics/: Framebuffer.hpp  GL.hpp  Graphics.hpp  Image.hpp  Material.hpp  MeshGenerators.hpp  OpenGL.hpp  RenderQueue.hpp  ResourceTypes.hpp  Texture.hpp  Window.hpp
Graphics/src/: Font.cpp  Framebuffer.cpp  Image.cpp  ImageLoader.cpp  Material.cpp  OpenGL.cpp  SpriteMap.cpp  Texture.cpp  Window.cpp
Main/: Application.cpp  Application.hpp  ApplicationTickable.hpp  Background.cpp  Background.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Game.cpp  Game.hpp  GameConfig.cpp  GameConfig.hpp  HitStat.cpp  HitStat.hpp  Input.cpp  Input.hpp  LaserTrackBuilder.cpp  LaserTrackBuilder.hpp  Resource.aps  ScoreScreen.cpp  Scoring.cpp  Scoring.hpp  SettingsScreen.cpp  SettingsScreen.hpp  SongFilter.cpp  SongFilter.hpp  SongSelect.cpp  SongSelect.hpp  Test.cpp  TitleScreen.cpp  TitleScreen.hpp  Track.cpp  Track.hpp  TrackEffects.cpp  TransitionScreen.cpp  stdafx.h
Main/Audio/: AudioPlayback.cpp  AudioPlayback.hpp  GameAudioEffects.cpp
Main/GUI/: HealthGauge.cpp  HealthGauge.hpp  PerformanceGraph.cpp  PerformanceGraph.hpp  PlayingSongInfo.cpp  PlayingSongInfo.hpp  SongSelectItem.cpp  SongSelectItem.hpp  SongSelectStyle.cpp  SongSelectStyle.hpp
Main/nuklear/: nuklear_sdl_gl3.h
Shared/: CMakeLists.txt
Shared/include/Shared/: Delegate.hpp  LuaBindable.hpp  Margin.hpp  Path.hpp  Rect.hpp  String.hpp  Time.hpp
Shared/src/: Color.cpp
Shared/src/Linux/: Path.cpp
Shared/src/MacOS/: Thread.cpp
Shared/src/Unix/: File.cpp  Path.cpp
Shared/src/Windows/: Path.cpp
Tests/: CMakeLists.txt
Tests.Game/: CMakeLists.txt  GraphicsBase.cpp  Main.cpp  TestAudio.cpp  TestMusicPlayer.cpp
Tests.Shared/: CMakeLists.txt
doc/: server.html
doc/proto/: Client.proto  Server.proto  Types.proto
docs/: Makefile  client.html  make.bat  server.html  tcp_protocol.md
docs/proto/: Client.proto  Server.proto  Types.proto
docs/source/: conf.py  filterwheel.rst  game.rst  gameplay.rst  gfx.rst  index.rst  scorescreen.rst  settingswheel.rst  songwheel.rst
docs/template/: html.tmpl
enc_temp_folder/f4bfb6fd37722a56db5bc238b2f1c8/: Image.cpp
src/: app.go  go.mod  go.sum  lock_debug.go  lock_release.go  middleware.go  room.go  server.go  user.go  util.go
